erDiagram
  cluster {
    uuid id PK
    string name
    enum environment
    string domain
    string external_ip
    string helm_release_name
    boolean ingress_enabled
    string ingress_class_name
    boolean external_tcp_proxy_enabled
    boolean external_secrets_enabled
    boolean cloudflare_enabled
    string cloudflare_zone_name
    boolean vault_enabled
    text notes
    timestamptz created_at
    timestamptz updated_at
  }

  database_instance {
    uuid id PK
    uuid cluster_id FK
    enum engine
    boolean enabled
    smallint instances
    string storage_size
    string storage_class
    boolean external_access_enabled
    int port
    boolean tls_enabled
    enum tls_mode
    string tls_secret_name
    string tls_ca_secret_name
    boolean monitoring_enabled
    timestamptz last_deployed_at
    text notes
    timestamptz created_at
    timestamptz updated_at
  }

  database_instance_public_hostname {
    uuid database_instance_id FK
    int hostname_order
    string hostname
  }

  database_resource {
    uuid id PK
    uuid database_instance_id FK
    string cpu_request
    string mem_request
    string cpu_limit
    string mem_limit
    enum resource_profile
    timestamptz created_at
    timestamptz updated_at
  }

  database_backup {
    uuid id PK
    uuid database_instance_id FK
    boolean enabled
    string destination_path
    string credential_secret
    string retention_policy
    string schedule
    timestamptz last_backup_at
    timestamptz created_at
    timestamptz updated_at
  }

  postgresql_config {
    uuid database_instance_id PK,FK
    boolean wal_enabled
    string wal_size
    string bootstrap_database
    string bootstrap_owner
  }

  mongo_config {
    uuid database_instance_id PK,FK
    boolean replica_set_horizons_enabled
    int replica_set_horizons_base_port
  }

  mysql_config {
    uuid database_instance_id PK,FK
    smallint haproxy_size
  }

  redis_config {
    uuid database_instance_id PK,FK
    boolean exporter_enabled
  }

  cassandra_config {
    uuid database_instance_id PK,FK
    string cluster_name
    string datacenter
    boolean require_client_auth
  }

  secret_ref {
    uuid id PK
    uuid cluster_id FK
    enum engine
    string secret_key
    string vault_path
    string k8s_secret_name
    string k8s_secret_key
    enum inject_via
    timestamptz last_rotated_at
    timestamptz rotation_due_at
    timestamptz created_at
    timestamptz updated_at
  }

  cluster ||--o{ database_instance : has
  cluster ||--o{ secret_ref : has
  database_instance ||--o{ database_instance_public_hostname : exposes
  database_instance ||--o| database_resource : sized_by
  database_instance ||--o| database_backup : backed_up_by
  database_instance ||--o| postgresql_config : postgresql
  database_instance ||--o| mongo_config : mongodb
  database_instance ||--o| mysql_config : mysql
  database_instance ||--o| redis_config : redis
  database_instance ||--o| cassandra_config : cassandra
